fixup post look and feel on mobile

--- a/src/css/community_seeds.less
+++ b/src/css/community_seeds.less
@@ -59,8 +59,6 @@
 .posts {
   padding-top: 25px;
   @media (max-width: @screen-xs-max) {
-    padding-left: 25px;
-    padding-right: 5px;
     padding-top: 15px;
   }
 }
