--- a/src/css/followers.less
+++ b/src/css/followers.less
@@ -2,6 +2,10 @@
     .seed-meta-text();
     color: @text-medium-dark;
 
+    @media (max-width: @screen-xs-max) {
+      margin-top: 4px;
+    }
+
     .actionIcon {
       font-size: 16px;
       vertical-align: middle;
